--- a/sources/Blocks/like/style.scss
+++ b/sources/Blocks/like/style.scss
@@ -1,8 +1,21 @@
-@use '@konomi/functions';
-
 .wp-block-konomi-like {
-  img {
-    min-width: #{functions.em(24)};
-    height: auto;
+  appearance: none;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+
+  .konomi-icon {
+    &--heart {
+      fill: white;
+      stroke: crimson;
+      stroke-width: 0.5;
+      transition: fill 0.3s;
+
+      &:hover {
+        fill: crimson;
+        opacity: 0.8;
+      }
+    }
   }
 }
