--- a/sources/Blocks/like/style.scss
+++ b/sources/Blocks/like/style.scss
@@ -1,21 +1,34 @@
 .wp-block-konomi-like {
-  appearance: none;
-  background: none;
-  border: none;
-  cursor: pointer;
-  padding: 0;
+    appearance: none;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
 
-  .konomi-icon {
-    &--heart {
-      fill: white;
-      stroke: crimson;
-      stroke-width: 0.5;
-      transition: fill 0.3s;
+    .konomi-icon {
+        &--heart {
+            fill: white;
+            stroke: crimson;
+            stroke-width: 0.5;
+            transition: all 0.3s;
 
-      &:hover {
-        fill: crimson;
-        opacity: 0.8;
-      }
+            &:hover {
+                fill: crimson;
+                fill-opacity: 0.6;
+            }
+        }
     }
-  }
+
+    &.is-active {
+        .konomi-icon {
+            &--heart {
+                fill: crimson;
+
+                &:hover {
+                    fill: crimson;
+                    fill-opacity: 1;
+                }
+            }
+        }
+    }
 }
