Various changes and fixes

--- a/sources/Blocks/like/view/style.scss
+++ b/sources/Blocks/like/view/style.scss
@@ -8,6 +8,7 @@ $color--crimson: #dc143cff;
 	margin: 0;
 	min-width: 10vw;
 	position: absolute;
+	text-align: center;
 }
 
 .wp-block-konomi-like {
