--- a/sources/Blocks/like/view/style.scss
+++ b/sources/Blocks/like/view/style.scss
@@ -72,7 +72,8 @@
 	}
 
 	.konomi-like-response-message {
-		inset-area: block-start;
+
+		inset-area: block-start; /* stylelint-disable property-no-unknown */
 		inset-block-end: anchor(top);
 		inset-inline-start: anchor(right);
 		margin: 0;
