Refactor webpack config and update block asset structure
Added MiniCssExtractPlugin and custom CleanUpJSPlugin to optimize file output. Separated CSS and JS outputs into distinct folders, updated block JSON files to reflect new paths, and removed unused SCSS imports from block entry points. Also changed Bookmark block's active color variable for consistency.

--- a/sources/Blocks/Bookmark/view/style.scss
+++ b/sources/Blocks/Bookmark/view/style.scss
@@ -8,7 +8,7 @@
 }
 
 .konomi-bookmark {
-	--konomi-color--crimson: #dc143cff;
+	--konomi-color--lightblue: #14a0dc;
 	--konomi-color--gray: #696969ff;
 	--konomi-color--white: #fff;
 
@@ -18,7 +18,7 @@
 	);
 	--konomi-icon--active: var(
 		--konomi-color--active,
-		var(--konomi-color--crimson)
+		var(--konomi-color--lightblue)
 	);
 
 	margin: 0;
